<resources>
    <string name="app_name">QuizApp</string>

    <string name="dummy_button">Quiz App</string>
    <string name="dummy_content">ECE655\nProject#3</string>
    <string name="login_text">Log In to Quiz</string>
    <string name="username_text">Username:</string>
    <string name="pass_text">Password:</string>
    <string name="QM_text">Quiz Master?</string>
    <string name="QT_text">Quiz Taker?</string>
    <string name="email_textInput">Email Address</string>
    <string name="pass_textInput">Password</string>
    <string name="username_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="signIn_button">Sign In</string>
    <string name="error_username_QT">The username is not found! Please try again!</string>
    <string name="error_login_QT">The entered password does not match to the user</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="quiz_name">Sample Quiz</string>

    <!---Quiz Fragment-->
    <string name="chornometer_quiz">Remaining Time:</string>
    <string name="quiz_result">Your score is:</string>
    <string name="attempts">Number of Attempts:</string>

    <!---Quiz Creation values-->
    <string name="quiz_name_title">Enter Quiz Name:</string>
    <string name="quiz_lenght">Enter Number of Questions including:</string>

    <!---Question Creation values-->
    <string name="btn_save">SAVE</string>
    <string name="btn_clear">CLEAR ALL</string>
    <string name="question_title">Enter Question:</string>
    <string name="question_timer">Enter Question Timer:</string>
    <string name="question_correct">Enter Correct Answer:</string>
    <string name="question_incorrect1">Enter Incorrect Answer 1:</string>
    <string name="question_incorrect2">Enter Incorrect Answer 2:</string>
    <string name="question_incorrect3">Enter Incorrect Answer 3:</string>

</resources>
